--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -8,11 +8,24 @@
         <div class="panel-body">
           <div id="status-message" style="display:none;">
           </div>
+          <form method="post" action="/accounts">
+            <div class="form-group">
+              <label for="username">Username</label>
+              <input type="text" id="username" name="username" class="form-control" placeholder="Username" />
+            </div>
+            <div class="form-group">
+              <label for="password">Password</label>
+              <input type="password" id="password" name="password" class="form-control" placeholder="Username" />
+            </div>
+            <input type="submit" class="btn btn-primary" value="Login" />
+          </form>
+          <!--
           <div style="text-align:center;">
             <img src="/assets/images/sji-logo.jpg" class="img-thumbnail"/>
             <hr/>
             <a href="#facebook" id="facebookLogin" class="btn btn-primary btn-lg">Facebook Login</a>
           </div>
+          -->
         </div>
       </div>
     </div>
