feat: Changed login redirect to members

--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -8,7 +8,7 @@
         <div class="panel-body">
           <div id="status-message" style="display:none;">
           </div>
-          <form method="post" action="/accounts">
+          <form method="post" action="/members">
             <div class="form-group">
               <label for="username">Username</label>
               <input type="text" id="username" name="username" class="form-control" placeholder="Username" />
