--- a/public/templates/members.html
+++ b/public/templates/members.html
@@ -1,130 +1,60 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>SJI '98 | Roster</title>
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
-    <script>
-      // Initialize Firebase
-      var config = {
-        apiKey: "AIzaSyC-H_ws7WPkLU9ax6Ge7SKFgh1pil4vCD8",
-        authDomain: "sji.asteriainteractive.com",
-        databaseURL: "https://sjibatch98.firebaseio.com",
-        storageBucket: "sjibatch98.appspot.com",
-        messagingSenderId: "33808654629",
-      };
-      firebase.initializeApp(config);
-    </script>
-    <style media="screen">
-    </style>
-  </head>
-  <body>
-    <nav class="navbar navbar-default navbar-static-top">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/dashboard.html">SJI Batch '98</a>
-        </div>
+<nav class="navbar navbar-default navbar-static-top">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/">SJI Batch '98</a>
+    </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="/members.html">Members <span class="sr-only">(current)</span></a></li>
-            <li><a href="/accounts.html">Accounts</a></li>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="/members">Members <span class="sr-only">(current)</span></a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li class="dropdown">
+          <a href="#" id="username" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Username <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#facebook-profile" id="facebook-profile" target="_blank">Facebook Profile</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#logout" id="signOut">Logout</a></li>
           </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li class="dropdown">
-              <a href="#" id="username" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Username <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="/profile.html">Profile</a></li>
-                <li><a href="#facebook-profile" id="facebook-profile" target="_blank">Facebook Profile</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#logout" id="signOut">Logout</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-4">
-          <div class="form-group">
-            <b class="pull-right">Members <span id="membersCount" class="badge"></span></b>
-            <label for="search">Search</label>
-            <input type="text" id="search" class="form-control" name="search" value="" placeholder="Search" />
-          </div>
-        </div>
-        <!--
-        <div class="col-md-offset-4 col-md-4">
-          <nav aria-label="Page navigation">
-            <ul class="pagination pull-right">
-              <li>
-                <a href="#" aria-label="Previous">
-                  <span aria-hidden="true">&laquo;</span>
-                </a>
-              </li>
-              <li><a href="#">1</a></li>
-              <li><a href="#">2</a></li>
-              <li><a href="#">3</a></li>
-              <li><a href="#">4</a></li>
-              <li><a href="#">5</a></li>
-              <li>
-                <a href="#" aria-label="Next">
-                  <span aria-hidden="true">&raquo;</span>
-                </a>
-              </li>
-            </ul>
-          </nav>
-        </div>
-        -->
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-4">
+      <div class="form-group">
+        <b class="pull-right">Members <span id="membersCount" class="badge"></span></b>
+        <label for="search">Search</label>
+        <input type="text" id="search" class="form-control" name="search" value="" placeholder="Search" />
       </div>
-      <table id="members-table" class="table table-hover table-bordered">
-        <thead>
-          <tr>
-            <th>Name</th>
-            <th>Email</th>
-            <th>Hometown</th>
-            <th>Location</th>
-            <th>Birthday</th>
-            <th>Profession</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td colspan="6">There are no members.</td>
-          </tr>
-        </tbody>
-      </table>
-    </div><!-- #container-fluid -->
-  </body>
-  <script type="text/javascript" src="/assets/js/cookie.js"></script>
-  <script type="text/javascript" src="/assets/js/scripts.js"></script>
-  <script type="text/javascript">
-  $(document).ready(function() {
-    'use strict';
-
-    $('#signOut').click(function(e) {
-      e.preventDefault();
-      user.signOut();
-    });
-
-    $(document).on('click','#members-table tbody tr',function() {
-      // setCookie('memberId',$(this).data('key'));
-      var memberId = $(this).data('key');
-      window.location.pathname = '/member/'+memberId;
-    });
-
-    checkAuth();
-  });
-  </script>
-</html>
+    </div>
+  </div>
+  <table id="members-table" class="table table-hover table-bordered table-condensed">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Email</th>
+        <th>Birthday</th>
+        <th>Payment Due</th>
+        <th>Paid Amount</th>
+        <th>Balance</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td colspan="7">There are no members.</td>
+      </tr>
+    </tbody>
+  </table>
+</div><!-- #container-fluid -->
