--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -1,33 +1,26 @@
-<div class="container-fluid">
-  <div id="login-page" style="margin-top:50px;" class="row">
-    <div class="col-md-offset-4 col-md-4">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h2 class="panel-title">SJI Batch '98 Login</h2>
-        </div>
-        <div class="panel-body">
-          <div id="status-message" style="display:none;">
-          </div>
-          <form method="post" action="/members">
-            <div class="form-group">
-              <label for="username">Username</label>
-              <input type="text" id="username" name="username" class="form-control" placeholder="Username" />
-            </div>
-            <div class="form-group">
-              <label for="password">Password</label>
-              <input type="password" id="password" name="password" class="form-control" placeholder="Username" />
-            </div>
-            <input type="submit" class="btn btn-primary" value="Login" />
-          </form>
-          <!--
-          <div style="text-align:center;">
-            <img src="/assets/images/sji-logo.jpg" class="img-thumbnail"/>
-            <hr/>
-            <a href="#facebook" id="facebookLogin" class="btn btn-primary btn-lg">Facebook Login</a>
-          </div>
-          -->
-        </div>
+<md-content style="padding-top:10%;">
+  <div layout="row">
+    <div flex="33">&nbsp;</div>
+    <div flex="33">
+      <div layout="column">
+        <md-card>
+          <md-card-title>
+            <md-card-title-text>
+              <span class="md-headline">Login</span>
+              <md-input-container class="md-block">
+                <label>Username</label>
+                <input ng-model="user.name">
+              </md-input-container>
+              <md-input-container class="md-block">
+                <label>Password</label>
+                <input ng-model="user.password">
+              </md-input-container>
+              <md-button class="md-raised md-primary">Login</md-button>
+            </md-card-title-text>
+          </md-card-title>
+        </md-card>
       </div>
     </div>
-  </div><!-- #login -->
-</div>
+    <div flex="33">&nbsp;</div>
+  </div>
+</md-content>
