--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -6,16 +6,18 @@
         <md-card>
           <md-card-title>
             <md-card-title-text>
-              <span class="md-headline">Login</span>
-              <md-input-container class="md-block">
-                <label>Username</label>
-                <input ng-model="user.name">
-              </md-input-container>
-              <md-input-container class="md-block">
-                <label>Password</label>
-                <input ng-model="user.password">
-              </md-input-container>
-              <md-button class="md-raised md-primary">Login</md-button>
+              <span class="md-headline" style="text-align:center;">SJI Batch'98 Login</span>
+              <form method="post" action="/members">
+                <md-input-container class="md-block">
+                  <label>Username</label>
+                  <input ng-model="user.name">
+                </md-input-container>
+                <md-input-container class="md-block">
+                  <label>Password</label>
+                  <input ng-model="user.password">
+                </md-input-container>
+                <md-button class="md-raised md-primary" type="submit">Login</md-button>
+              </form>
             </md-card-title-text>
           </md-card-title>
         </md-card>
