--- a/public/templates/members.html
+++ b/public/templates/members.html
@@ -29,7 +29,7 @@ window.members.search = "";
           <th>Payment Due</th>
           <th>Paid Amount</th>
           <th>Balance</th>
-          <th>Status</th>
+          <th>Roles</th>
           <th></th>
         </tr>
       </thead>
