feat: Add MemberDetail module and template

--- a/public/templates/members-id.html
+++ b/public/templates/members-id.html
@@ -12,13 +12,7 @@ window.members.search = "";
 
 <md-content style="padding:0 10px 0 10px;">
     <section>
-        <md-button class="md-raised md-primary" style="margin:10px 0;" ng-href="/members/add">Add Member</md-button>
-    </section>
-    <section layout="row" layout-md="column" layout-align="left center" layout-wrap>
-      <md-input-container flex="25">
-        <label>Member Search</label>
-        <input type="text" id="memberSearch" name="memberSearch" ng-model="members.search" maxlength="100" />
-      </md-input-container>
+        <md-button class="md-raised md-default" style="margin:10px 0;" ng-href="/members">Go Back</md-button>
     </section>
     <table id="members-table" class="table table-hover table-bordered table-condensed">
       <thead>
