feat: Change template of member-id tempate

--- a/public/templates/members-id.html
+++ b/public/templates/members-id.html
@@ -15,10 +15,9 @@ window.members.search = "";
         <md-button class="md-raised md-default" style="margin:10px 0;" ng-href="/members">Go Back</md-button>
     </section>
     <section>
-      <p><b>Name: </b>{{member.name}}</p>
+      <h3><b>{{member.name}}</b></h3>
       <p><b>Email: </b>{{member.email}}</p>
-      <p><b>Birthday: </b>{{member.birthday}}</p>
-      <p><b>Roles: </b>{{member.birthday}}</p>
+      <p><b>Birthday: </b>{{member.birthdate}}</p>
     </section>
     <hr/>
     <section>
