feat: Add member payments page

--- a/public/templates/members-id.html
+++ b/public/templates/members-id.html
@@ -23,7 +23,7 @@ window.members.search = "";
     <hr/>
     <section>
       <h4>Payment History</h4>
-      <md-button class="md-raised md-primary" ng-href="/members" style="margin:10px 0;">Add Payment</md-button>
+      <md-button class="md-raised md-primary" ng-href="/members/{{member.key}}/payment" style="margin:10px 0;">Add Payment</md-button>
       <table id="transactions-table" class="table table-hover table-bordered table-condensed">
         <thead>
           <tr>
