feat: Change currency of transaction

--- a/public/templates/members.html
+++ b/public/templates/members.html
@@ -43,7 +43,7 @@ window.members.search = "";
           <td>{{member.birthdate}}</td>
           <td></td>
           <td></td>
-          <td>{{member.balance}}</td>
+          <td>{{member.balance | currency:'$ ':2}}</td>
           <td></td>
           <td></td>
         </tr>
