feat: Add payments

--- a/public/templates/members-id.html
+++ b/public/templates/members-id.html
@@ -23,7 +23,7 @@ window.members.search = "";
       </section>
       <md-card flex-offset="30" flex="40">
         <md-card-content>
-          <form method="post">
+          <form ng-submit="addPayment()">
             <h4>Add Payment</h4>
             <div layout="row">
               <md-input-container flex="40">
