--- a/public/templates/members.html
+++ b/public/templates/members.html
@@ -10,7 +10,7 @@ window.members.search = "";
   </md-nav-bar>
 </md-content>
 
-<md-content style="padding:0 10px 0 10px;">
+<md-content layout-padding>
     <section>
         <md-button class="md-raised md-primary" style="margin:10px 0;" ng-href="/members/add">Add Member</md-button>
     </section>
