--- a/public/templates/members-id.html
+++ b/public/templates/members-id.html
@@ -10,7 +10,7 @@ window.members.search = "";
   </md-nav-bar>
 </md-content>
 
-<md-content style="padding:0 10px 0 10px;">
+<md-content layout-padding>
     <section>
         <md-button class="md-raised md-default" style="margin:10px 0;" ng-href="/members">Go Back</md-button>
     </section>
