feat: Change search model

--- a/public/templates/members.html
+++ b/public/templates/members.html
@@ -17,7 +17,7 @@ window.members.search = "";
     <section layout="row" layout-md="column" layout-align="left center" layout-wrap>
       <md-input-container flex="25">
         <label>Member Search</label>
-        <input type="text" id="memberSearch" name="memberSearch" ng-model="members.search" maxlength="100" />
+        <input type="text" id="memberSearch" name="memberSearch" ng-model="search" maxlength="100" />
       </md-input-container>
     </section>
     <table id="members-table" class="table table-hover table-bordered table-condensed">
