--- a/public/templates/members.html
+++ b/public/templates/members.html
@@ -1,7 +1,31 @@
 <!-- Container #1 (see wireframe) -->
-<script>
-window.members.search = "";
-</script>
+<!--
+<md-toolbar class="md-default md-toolbar-tools">
+  <div layout="row">
+    <md-toolbar-filter layout layout-align="center center">
+      <h2 style="padding:0;margin:0;">SJI Batch '98</h2>
+      <md-icon md-svg-icon="call:chat"></md-icon>
+    </md-toolbar-filter>
+    <md-menu-bar>
+      <md-menu>
+        <button>Members</button>
+      </md-menu>
+      <md-menu>
+        <button>Logout</button>
+      </md-menu>
+    </md-menu-bar>
+  </div>
+</md-toolbar>
+-->
+<md-toolbar>
+  <div class="md-toolbar-tools">
+    <md-truncate><h1>SJI Batch '98</h1></md-truncate>
+    <!--<md-button>Members</md-button>-->
+    <span flex></span>
+    <md-button class="md-raised">Logout</md-button>
+  </div>
+</md-toolbar>
+<!--
 <md-content ng-cloak>
   <md-nav-bar md-selected-nav-item="currentNavItem" nav-bar-aria-label="navigation links">
     <h3 class="md-navbar-title" style="margin:10px 5px;">SJI Batch '98</h3>
@@ -9,17 +33,28 @@ window.members.search = "";
     <md-nav-item md-nav-click="goto('logout')" name="logout">Logout</md-nav-item>
   </md-nav-bar>
 </md-content>
-
+-->
+<md-content layout-padding layout="row">
+  <section>
+      <md-button class="md-raised md-primary" style="margin:10px 0;" ng-href="/members/add">Add Member</md-button>
+  </section>
+  <span flex></span>
+  <section>
+    <form ng-submit="$event.preventDefault();">
+      <md-autocomplete
+        md-items="member in members"
+        md-item-text="member.name"
+        md-floating-label="Member Search">
+        <md-item-template>
+          <span class="member-info">
+            <span>{{member | json}}</span>
+          </span>
+        </md-item-template>
+      </md-autocomplete>
+    </form>
+  </section>
+</md-content>
 <md-content layout-padding>
-    <section>
-        <md-button class="md-raised md-primary" style="margin:10px 0;" ng-href="/members/add">Add Member</md-button>
-    </section>
-    <section layout="row" layout-md="column" layout-align="left center" layout-wrap>
-      <md-input-container flex="25">
-        <label>Member Search</label>
-        <input type="text" id="memberSearch" name="memberSearch" ng-model="search" maxlength="100" member-search="searchMember()" />
-      </md-input-container>
-    </section>
     <section layout="row" layout-md="column" layout-align="left center" layout-wrap>
       <table id="members-table" class="table table-hover table-bordered table-condensed">
         <thead>
