--- a/public/templates/members-id.html
+++ b/public/templates/members-id.html
@@ -1,14 +1,12 @@
 <!-- Container #1 (see wireframe) -->
-<script>
-window.members.search = "";
-</script>
-<md-content ng-cloak>
-  <md-nav-bar md-selected-nav-item="currentNavItem" nav-bar-aria-label="navigation links">
-    <h3 class="md-navbar-title" style="margin:10px 5px;">SJI Batch '98</h3>
-    <md-nav-item md-nav-click="goto('members')" name="members">Members</md-nav-item>
-    <md-nav-item md-nav-click="goto('logout')" name="logout">Logout</md-nav-item>
-  </md-nav-bar>
-</md-content>
+<md-toolbar>
+  <div class="md-toolbar-tools">
+    <md-truncate><h1>SJI Batch '98</h1></md-truncate>
+    <!--<md-button>Members</md-button>-->
+    <span flex></span>
+    <md-button class="md-raised">Logout</md-button>
+  </div>
+</md-toolbar>
 
 <md-content layout-padding>
     <section>
