chore: Removed flex

--- a/public/templates/members.html
+++ b/public/templates/members.html
@@ -30,7 +30,7 @@
   </section>
   <span flex="70"></span>
   <section>
-    <md-button class="md-raised md-primary" style="margin:10px 0;" ng-href="/members/add" flex="100">Add Member</md-button>
+    <md-button class="md-raised md-primary" style="margin:10px 0;" ng-href="/members/add">Add Member</md-button>
   </section>
 </md-content>
 <md-content layout-padding>
