--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -9,12 +9,12 @@
               <span class="md-headline" style="text-align:center;">SJI Batch'98 Login</span>
               <form method="post" action="/members">
                 <md-input-container class="md-block">
-                  <label>Username</label>
-                  <input ng-model="user.name">
+                  <label>Email</label>
+                  <input type="email" ng-model="user.name">
                 </md-input-container>
                 <md-input-container class="md-block">
                   <label>Password</label>
-                  <input ng-model="user.password">
+                  <input type="password" ng-model="user.password">
                 </md-input-container>
                 <md-button class="md-raised md-primary" type="submit">Login</md-button>
               </form>
